# pcps

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
doc/: annotated.html  classes.html  classpcps_1_1Cloud-members.html  classpcps_1_1Cloud.html  classpcps_1_1Cloud__coll__graph.map  classpcps_1_1Cloud__coll__graph.md5  classpcps_1_1Context-members.html  classpcps_1_1Context.html  classpcps_1_1DeviceCloud-members.html  classpcps_1_1DeviceCloud.html  classpcps_1_1NormalExtractor-members.html  classpcps_1_1NormalExtractor.html  classpcps_1_1NormalMerger-members.html  classpcps_1_1NormalMerger.html  classpcps_1_1NormalRegion-members.html  classpcps_1_1NormalRegion.html  classpcps_1_1NormalRegion__coll__graph.map  classpcps_1_1NormalRegion__coll__graph.md5  classpcps_1_1NormalSplitter-members.html  classpcps_1_1NormalSplitter.html  classpcps_1_1Organizer-members.html  classpcps_1_1Organizer.html  classpcps_1_1Plane-members.html  classpcps_1_1Plane.html  classpcps_1_1PlaneSegmentator-members.html  classpcps_1_1PlaneSegmentator.html  classpcps_1_1PlaneSegmentator__coll__graph.map  classpcps_1_1PlaneSegmentator__coll__graph.md5  classpcps_1_1Point-members.html  classpcps_1_1Point.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  menudata.js  pcps__cloud_8h_source.html  (+13 more)
doc/search/: all_0.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+2 more)
lib/: CMakeLists.txt
lib/include/: pcps_cloud.h  pcps_context.h  pcps_device_cloud.h  pcps_epsilon.h  pcps_logger.h  pcps_normal_extractor.h  pcps_normal_merger.h  pcps_normal_region.h  pcps_normal_splitter.h  pcps_organizer.h  pcps_pcl.h  pcps_plane.h  pcps_plane_segmentator.h  pcps_point.h
lib/src/: pcps_assert.h  pcps_boost_compute.h  pcps_cloud.cpp  pcps_context_cpu.cpp  pcps_context_cuda.cpp  pcps_context_opencl.cpp  pcps_device_cloud.cpp  pcps_device_cloud_cpu.cpp  pcps_device_cloud_cuda.cpp  pcps_device_cloud_opencl.cpp  pcps_normal_extractor.cpp  pcps_normal_extractor_cpu.cpp  pcps_normal_extractor_cuda.cpp  pcps_normal_extractor_opencl.cpp  pcps_normal_merger.cpp  pcps_normal_region.cpp  pcps_normal_splitter.cpp  pcps_normal_splitter_cpu.cpp  pcps_normal_splitter_cuda.cpp  pcps_normal_splitter_opencl.cpp  pcps_organizer.cpp  pcps_organizer_cpu.cpp  pcps_organizer_cuda.cpp  pcps_organizer_opencl.cpp  pcps_plane_segmentator.cpp  pcps_point.cpp  pcps_tweak_me.h
lib/src/pcps-thrust/: CMakeLists.txt
lib/src/pcps-thrust/include/: pcps_thrust.h  pcps_thrust_cached_allocator.h  pcps_thrust_cloud.h  pcps_thrust_normal_extractor.h  pcps_thrust_normal_splitter.h  pcps_thrust_organizer.h
lib/src/pcps-thrust/src/: pcps_thrust_cached_allocator.cu  pcps_thrust_cloud.cu  pcps_thrust_normal_extractor.cu  pcps_thrust_normal_splitter.cu  pcps_thrust_organizer.cu
tests/: CMakeLists.txt
tests/data/normal_merger/: input.txt
tests/data/normal_splitter/: input.txt
tests/data/organizer/: expected.pcd  input.pcd
tests/include/: test_util.h
tests/src/: example.cpp  test.cpp  test_util.cpp
viewer/: CMakeLists.txt
viewer/src/: main.cpp  pcps_vw_central_widget.cpp  pcps_vw_central_widget.h  pcps_vw_cloud_widget.cpp  pcps_vw_cloud_widget.h  pcps_vw_color_map.cpp  pcps_vw_color_map.h  pcps_vw_input_cloud_widget.cpp  pcps_vw_input_cloud_widget.h  pcps_vw_main_window.cpp  pcps_vw_main_window.h  pcps_vw_normal_extraction_cloud_widget.cpp  pcps_vw_normal_extraction_cloud_widget.h  pcps_vw_normal_merge_cloud_widget.cpp  pcps_vw_normal_merge_cloud_widget.h  pcps_vw_normal_split_cloud_widget.cpp  pcps_vw_normal_split_cloud_widget.h  pcps_vw_options_tree_widget.cpp  pcps_vw_options_tree_widget.h  pcps_vw_options_widget.cpp  pcps_vw_options_widget.h  pcps_vw_organization_cloud_widget.cpp  pcps_vw_organization_cloud_widget.h  pcps_vw_point_cloud.h  pcps_vw_project.cpp  pcps_vw_project.h  pcps_vw_random.h  pcps_vw_result.h  pcps_vw_settings.cpp  pcps_vw_settings.h  pcps_vw_show_progress_dialog.h  pcps_vw_stages_manager_widget.cpp  pcps_vw_stages_manager_widget.h
